fix for missing line wrap on comments

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -58,3 +58,7 @@ a {
     background-color: var(--dark);
     color: var(--secondary);
 }
+
+pre {
+    white-space: pre-wrap;
+}
